# am_choco_project

./: .gitignore  README.md  db_dev.conf  manage.py  pyproject.toml
chocolate_bakery_proj/: asgi.py  settings.py  urls.py  wsgi.py
products/: admin.py  models.py  serializers.py  urls.py  views.py
products/migrations/: 0001_initial.py  0002_alter_category_name_alter_category_slug.py  0003_producttypes_products.py  0004_products_price.py  0005_producttypes_slug_alter_category_slug.py  0006_alter_products_product_type.py  0007_alter_products_product_type.py  0008_category_image.py
products/tests/: test_models.py
store/: admin.py  models.py  serializers.py  urls.py  utils.py  views.py
store/migrations/: 0001_initial.py  0002_alter_orderitemcartrelations_options_and_more.py  0002_remove_package_package_price_alter_package_count.py  0003_cart_orderitem_alter_order_options_and_more.py  0004_alter_orderitem_sale.py  0005_alter_cart_options_alter_order_options_and_more.py  0006_cart_total_cost_alter_cart_cart_sale.py  0007_alter_order_consumer_phone.py  0008_alter_order_consumer_phone.py  0009_remove_cart_total_cost.py  0010_alter_cart_is_completed_alter_orderitem_order_and_more.py  0011_cart_time_created.py  0012_remove_cart_order_remove_orderitem_order_and_more.py  0013_cart_is_confirmed.py  0014_cart_session_id.py  0015_alter_cart_session_id.py  0016_remove_cart_session_id.py
store/serializers/: cart.py  order_item.py  order_item_cart_rel.py  product.py
store/tests/: test_models.py  utils.py
store/viewsets/: cart.py  order_item.py  orderitem_cart.py  utils.py
(+4 files in other folders)
