[tool.poetry]
name = "'am chocolate'"
version = "0.1.0"
description = "'Flask backend to an AM Chocolate web site'"
authors = ["varabyeu <varabyeu.v@yandex.by>"]
license = "'My license'"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.1.5"
djangorestframework = "^3.14.0"
pillow = "^9.4.0"
pymysql = "^1.0.2"
slugify = "^0.0.1"
django-debug-toolbar = "^3.8.1"
coverage = "^7.0.2"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
flake8 = "^6.0.0"
coverage = "^7.0.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
